--- a/build.gradle
+++ b/build.gradle
@@ -16,13 +16,13 @@ dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     testImplementation 'org.slf4j:slf4j-api:2.0.3'
     implementation 'org.slf4j:slf4j-log4j12:2.0.3'
-    implementation 'com.github.kotlin-telegram-bot.kotlin-telegram-bot:dispatcher:6.0.7'
-    implementation 'org.jetbrains.exposed:exposed-core:0.38.2'
-    implementation 'org.jetbrains.exposed:exposed-dao:0.38.2'
-    implementation 'org.jetbrains.exposed:exposed-jdbc:0.38.2'
-    implementation 'org.jetbrains.exposed:exposed-kotlin-datetime:0.38.2'
-    implementation 'org.postgresql:postgresql:42.5.0'
+    implementation 'com.github.lifestreamy:kotlin-telegram-bot:6.0.9'
     implementation 'com.github.lifestreamy:TreeBuilder:master-SNAPSHOT'
+    implementation 'org.jetbrains.exposed:exposed-core:0.40.1'
+    implementation 'org.jetbrains.exposed:exposed-dao:0.40.1'
+    implementation 'org.jetbrains.exposed:exposed-jdbc:0.40.1'
+    implementation 'org.jetbrains.exposed:exposed-kotlin-datetime:0.40.1'
+    implementation 'org.postgresql:postgresql:42.5.0'
 }
 
 test {
