--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### config.properties ###
+config.properties
+
 ### IntelliJ IDEA ###
 *.iws
 *.iml
