--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ allprojects {
 
 dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
-    testImplementation 'org.slf4j:slf4j-api:2.0.3'
-    implementation 'org.slf4j:slf4j-log4j12:2.0.3'
-    implementation 'com.github.lifestreamy:kotlin-telegram-bot:6.0.9'
+//    testImplementation 'org.slf4j:slf4j-api:2.0.3'
+//    implementation 'org.slf4j:slf4j-log4j12:2.0.3'
+    implementation('io.ktor:ktor-client-core:2.1.3')
+    implementation('io.ktor:ktor-client-cio:2.1.3')
     implementation 'eu.vendeli:telegram-bot:2.2.2'
     implementation 'com.github.lifestreamy:TreeBuilder:master-SNAPSHOT'
     implementation 'org.jetbrains.exposed:exposed-core:0.40.1'
