Added interaction with Redis, menu with keyboard buttons is now working! Added liquibase. Updated to TreeBuilder v1.0. Added docker-compose.yml for reference. Dockerfile is in gitignore for now

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ build/
 
 ### config.properties ###
 config.properties
+### bot logs
 logs/
+### liquibase.properties
+/src/main/resources/db/liquibase.properties
 ### IntelliJ IDEA ###
 *.iws
 *.iml
@@ -40,3 +43,5 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+/Dockerfile
