--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,70 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.7.10'
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    id 'org.liquibase.gradle' version '2.1.1'
+    id "com.github.johnrengelman.shadow" version "7.1.2"
+    id 'application'
 }
 group = 'org.example'
 version = '1.0-SNAPSHOT'
 
+mainClassName = 'mainBot.MainBot'
 
+jar {
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+}
+//tasks.withType(JavaCompile) {
+//    sourceCompatibility = "16"
+//    targetCompatibility = "16"
+//}
 allprojects {
+    apply plugin: 'java'
+    sourceCompatibility = 16
+    targetCompatibility = 16
     repositories {
         mavenCentral()
         maven { url "https://jitpack.io" }
     }
 }
 
+
 dependencies {
+    implementation 'info.picocli:picocli:4.7.0'
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 //    testImplementation 'org.slf4j:slf4j-api:2.0.3'
 //    implementation 'org.slf4j:slf4j-log4j12:2.0.3'
     implementation('io.ktor:ktor-client-core:2.1.3')
     implementation('io.ktor:ktor-client-cio:2.1.3')
-    implementation 'eu.vendeli:telegram-bot:2.2.2'
-    implementation 'com.github.lifestreamy:TreeBuilder:master-SNAPSHOT'
+    implementation 'eu.vendeli:telegram-bot:2.4.2'
+
+    implementation 'com.github.lifestreamy:TreeBuilder:v1.0'
+
     implementation 'org.jetbrains.exposed:exposed-core:0.40.1'
     implementation 'org.jetbrains.exposed:exposed-dao:0.40.1'
     implementation 'org.jetbrains.exposed:exposed-jdbc:0.40.1'
     implementation 'org.jetbrains.exposed:exposed-kotlin-datetime:0.40.1'
     implementation 'org.postgresql:postgresql:42.5.0'
+    implementation 'com.sxtanna.database:Kedis:+'
+    liquibaseRuntime 'org.liquibase:liquibase-core:4.2.2'
+    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
+    liquibaseRuntime 'org.postgresql:postgresql:42.5.0'
 }
+
+
+liquibase {
+    activities {
+        main {
+            changeLogFile "src/main/resources/db/liquibase-changelog.xml"
+            url "jdbc:postgresql://localhost:5432/test"
+            username "postgres"
+            password "6274"
+            driver "org.postgresql.Driver"
+        }
+    }
+}
+
 
 test {
     useJUnitPlatform()
