--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,25 @@
+buildscript {
+    ext.kotlin_version = '1.7.21'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    id 'org.jetbrains.kotlin.jvm' version '1.7.21'
     id 'org.liquibase.gradle' version '2.1.1'
     id "com.github.johnrengelman.shadow" version "7.1.2"
     id 'application'
 }
+apply plugin: 'kotlin'
 group = 'org.example'
 version = '1.0-SNAPSHOT'
 
-mainClassName = 'mainBot.MainBot'
+//mainClassName = 'mainBot.MainBot'
+mainClassName = 'Testing.kt'
 
 jar {
     manifest {
@@ -50,6 +61,7 @@ dependencies {
     liquibaseRuntime 'org.liquibase:liquibase-core:4.2.2'
     liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
     liquibaseRuntime 'org.postgresql:postgresql:42.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 
@@ -57,12 +69,15 @@ liquibase {
     activities {
         main {
             changeLogFile "src/main/resources/db/liquibase-changelog.xml"
-            url "jdbc:postgresql://localhost:5432/test"
+            url "jdbc:postgresql://localhost:5432/telegram_bot_db"
+//            ^^^ PostgreSQL does not support ?createDatabaseIfNotExist=true !!!
             username "postgres"
-            password "6274"
+            password "1234"
             driver "org.postgresql.Driver"
+//            liquibaseProLicenseKey "aeioufakekey32aeioufakekey785463214"
         }
     }
+    runList = 'main'
 }
 
 
@@ -71,9 +86,12 @@ test {
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = '16'
+    kotlinOptions.jvmTarget = "1.8"
 }
 
 compileTestKotlin {
-    kotlinOptions.jvmTarget = '16'
+    kotlinOptions.jvmTarget = "1.8"
+}
+repositories {
+    mavenCentral()
 }
