--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'org.jetbrains.exposed:exposed-kotlin-datetime:0.40.1'
     implementation 'org.postgresql:postgresql:42.5.0'
     implementation 'com.sxtanna.database:Kedis:+'
+    implementation 'com.zaxxer:HikariCP:5.0.1'
     liquibaseRuntime 'org.liquibase:liquibase-core:4.2.2'
     liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
     liquibaseRuntime 'org.postgresql:postgresql:42.5.0'
