--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.7.22'
+    ext.kotlin_version = '1.8.0'
     repositories {
         mavenCentral()
     }
@@ -9,7 +9,7 @@ buildscript {
 }
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.21'
+    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
     id 'org.liquibase.gradle' version '2.1.1'
     id "com.github.johnrengelman.shadow" version "7.1.2"
     id 'application'
@@ -42,14 +42,14 @@ allprojects {
 
 
 dependencies {
-    implementation 'info.picocli:picocli:4.7.0'
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
+//    implementation 'info.picocli:picocli:4.7.0'
 //    testImplementation 'org.slf4j:slf4j-api:2.0.3'
 //    implementation 'org.slf4j:slf4j-log4j12:2.0.3'
-    implementation('io.ktor:ktor-client-core:2.2.1')
-    implementation('io.ktor:ktor-client-cio:2.2.1')
-    implementation 'eu.vendeli:telegram-bot:2.4.2'
-    implementation 'com.github.lifestreamy:TreeBuilder:v1.0'
+//    implementation('io.ktor:ktor-client-core:2.2.1')
+//    implementation('io.ktor:ktor-client-cio:2.2.1')
+    implementation 'eu.vendeli:telegram-bot:2.5.4'
+    implementation 'com.github.lifestreamy:TreeBuilder:v1.1'
     implementation 'org.jetbrains.exposed:exposed-core:0.40.1'
     implementation 'org.jetbrains.exposed:exposed-dao:0.40.1'
     implementation 'org.jetbrains.exposed:exposed-jdbc:0.40.1'
